test/error/syntax/err3.rzy
// use of reserved keyword (R) as template argument name

type
  Rec{R:Any} = Record
    a : R;
  end

component
  Err3
    implementation elementary
      var
        dat: Rec{Boolean};
  end

